--- a/css/style.css
+++ b/css/style.css
@@ -182,8 +182,10 @@ footer p {
         display: table;
         float: none;
         margin: 0 auto;
+        font-weight: 700;
         table-layout: fixed;
-        font-size: 1.25em;
+        font-size: 1.3em;
+        font-family: "Josefin Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
     }
 }
 
@@ -220,4 +222,49 @@ footer p {
     font-size: .8em;
     padding: 11px 88px;
     margin-top: -9%;
+}
+
+.cm{
+    margin-left:13%;
+    margin-bottom:-89%; 
+    padding-top:17px; 
+    font-weight: 800;
+    font-size:25px;
+    font-family: "Josefin Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+
+
+.contactabout
+{   
+    clear:both;
+    width:90%;
+    height:auto;
+    margin-top:1x0%;
+    margin-left:5%;
+    border-top:2% #888 groove;
+     font-family: "Josefin Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
+     font-size: 22px;
+     font-weight: 600;
+}
+
+
+#social-media-icons     {clear:both;
+                        float:right;
+                        position:relative;}
+#social-media-icons     {margin-right:0%}
+
+#social-media-icons ul  {text-align:right;}
+
+#social-media-icons ul li {display:inline;}
+
+.maintext
+{
+font-size:20px; 
+font-weight:bold;
+color:#000;
+lineheight:150%;
+ border-bottom:2px black solid;
+  padding:10px; 
+  text-align:center;
+   font-family:"Comic Sans MS", cursive;   
 }
