--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,8 @@ h6 {
 }
 
 p {
-    font-size: 1.25em;
+
+    font-size: .8em;
     line-height: 1.6;
     color: #000;
 }
@@ -34,7 +35,9 @@ p {
    padding: 30px 15px;
     background: #fff;
     background: rgba(255,255,255,0.9);
-;
+}
+.col-sm-6{
+    margin-left: -22px;
 }
 hr {
     max-width: 400px;
@@ -200,7 +203,8 @@ footer p {
 
 .underimage{
     display: inline-block;
-    font-size: 1.4em;
+    font-size: 15px;
+    margin-right: -25px;
 }
 .underimage a {color:#2e3548;
  }        
@@ -213,15 +217,21 @@ footer p {
  
 }
 
-.navbar-brand{
-     text-transform: uppercase;
+.navbar-brand {
+    text-transform: uppercase;
     font-weight: 900;
-    letter-spacing: 2px;
-
+    letter-spacing: 1px;
+    font-size: 13px;
+    margin-top: -59px;
     text-align: center;
-    font-size: .8em;
-    padding: 11px 88px;
-    margin-top: -9%;
+    padding-right: 95px;
+}
+
+#map_canvas {
+   display:flex;
+   margin-left: -55px;
+   width: 100%;
+   height: 400px;
 }
 
 .cm{
@@ -262,7 +272,6 @@ footer p {
 font-size:20px; 
 font-weight:bold;
 color:#000;
-lineheight:150%;
  border-bottom:2px black solid;
   padding:10px; 
   text-align:center;
